--- a/nav.css
+++ b/nav.css
@@ -1,8 +1,18 @@
+
+
+
+
+
+
 #nav {
     height: 76px;
-    background: darkblue;
+    background:#122843;
     display: flex;
     justify-content: space-between;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
 }
 .logo {
     height: 30px;
@@ -17,17 +27,25 @@
 .menu {
     display: flex;
     align-items: stretch;
+    
 }
 .nav-item {
-    background: darkblue;
+    background: #122843;
     display: flex;
     align-items: center;
     align-self: center;
     justify-content: center;
     height: 52px;
-    font-size: 22px;
+    font-size: 18px;
     margin: 5px;
     width: 230px;
     color: white;
     text-decoration: none;
+    letter-spacing: 4px;
+    cursor: pointer;
+    transition: color 0.5s, font-size 0.5s;
+}
+.nav-item:hover{
+    color:lightblue;
+    font-size: 23px;
 }
