--- a/hero.css
+++ b/hero.css
@@ -14,17 +14,21 @@
 }
 
 .text {
-    background: green;
-    width: 250px;
-    margin: 20px;
+    background: #1c2b49;
+    width: 50%;
+    margin: 30px;
     padding: 20px;
+    text-align: center;
+    color: white;
 }
 
 .description {
-    background: red;
-    width: 400px;
+    background:#1c2b49;
+    width: 70%;
     margin: 20px;
     padding: 20px;
+    text-align: justify;
+    color: #14f1d9;
 }
 
 
@@ -34,7 +38,9 @@
 
 .animation {
     background: green;
-    width: 250px;
+    width: 70%;
+    margin: 20px;
+    padding: 20px;
     
 
 }
@@ -42,3 +48,12 @@
 .button {
  margin: 20px;
 }
+
+. {
+    animation: permarotate infinite 5s linear;
+}
+
+@keyframes permarotate {
+    to {
+        transform: rotate(360deg);
+    }
