--- a/hero.css
+++ b/hero.css
@@ -6,29 +6,37 @@
 
 .left {
     width: 50%;  
+    display: block;
+    
 }
 
 .text {
-    background: #3d491c;
+    background:  #1c2b49;
     width: 50%;
-    margin: 30px auto 30px 90px;
+    margin: 20px auto 40px 200px;
     padding: 20px;
     text-align: center;
     color: white;
+    letter-spacing: 2px;
+    font-size: 20px;
 }
 
 .description {
-    background: rebeccapurple;
+    background:  #1c2b49;
     width: 90%;
-    margin: 20px auto 25px 15px;
-    padding: 20px;
+    margin: 50px auto 100px 15px;
+    padding: 30px;
     text-align: justify;
     color: #14f1d9;
+    font-size: 20px;
+
 }
 .odnosnik {
-    background: #3d491c;
+    background:  #1c2b49;
     text-align: center;
     color: white;
+    font-size: 30px;
+    margin-bottom: 20px;
 }
 
 .right {
@@ -46,4 +54,27 @@
  img:hover {
     -webkit-transform: scaleX(-1);
     transform: scaleX(-1);
+}
+
+a {
+    text-decoration: none;
+    letter-spacing: 3px;
+    font-size: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+a:link {
+    color: red;
+}
+
+a:visited {
+    color: rgb(5, 107, 56);
+}
+
+a:hover {
+    color: hotpink;
+}
+
+a:active {
+    color: blue;
 }
