--- a/nav.css
+++ b/nav.css
@@ -40,6 +40,7 @@
     margin: 5px;
     width: 230px;
     color: white;
+    font-family: Roboto,Arial,sans-serif;
     text-decoration: none;
     letter-spacing: 4px;
     cursor: pointer;
