--- a/form.css
+++ b/form.css
@@ -4,20 +4,49 @@ body{
 }
 .form-container{
     height: 600px;
-    background: lightblue;
+    background: #122843;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     
 }
-.form{
-    height: 15%;
-    width: 20%;
-    background: blueviolet;
-    margin-top: 100px;
-    
-}
-.form-input{
 
+.form{
+    height: 35%;
+    width: 40%;
+    background: #5e93d4;
+    display: flex;
+    align-items: center;
+    border-radius: 15px;
+    justify-content:center;
+}
+
+form {
+    display: flex;
+    align-items: center;
+    border-radius: 15px;
+    justify-content:center;
+    flex-direction: column;
+}
+
+.form-input{
+    border-radius: 15px;
+    justify-content:center;
+    font-size: 20px;
+    
 
 }
 .form-btn{
+    border-radius: 15px;
+    font-size: 15px
 
+}
+.form-btn button {
+    font-size: 15px;
+    font-family: Roboto,Arial,sans-serif;
+    margin-top: 10px;
+}
+input{
+    height: 20px;
+    font-family: Roboto,Arial,sans-serif;
 }
