--- a/team.css
+++ b/team.css
@@ -1,13 +1,17 @@
 body {
     margin: 0;
 }
+#team {
+    background: #122843;
+    /* background-image: linear-gradient(to bottom right, #d9e1eb 50%, #122843 50%); */
+}
 
 .main-team {
-    background: darkblue;
+    /* background: darkblue; */
 }
 
 .team-top {
-    background: lightblue;
+    /* background: lightblue; */
     display: flex;
     justify-content: space-between;
 }
@@ -29,12 +33,16 @@ body {
     padding: 0;
     width: 100%;
     height: 100%;
+    border-radius: 5%;
+    box-shadow: 0 0 20px whitesmoke;
 }
 
 .team-bottom {
-    background: lightcyan;
+    /* background: lightcyan; */
     display: flex;
     justify-content: space-between;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 .team-member {
@@ -52,7 +60,7 @@ body {
 
 .team-member, .team-description {
     box-sizing: border-box;
-    border: 10px solid black;
+    /* border: 10px solid black; */
 }
 
 .member-img-container, .member-description, .member-links {
@@ -65,12 +73,15 @@ body {
     border-radius: 50%;
     width: 250px;
     height: 250px;
-    box-shadow: 0 0 20px black
+    box-shadow: 0 0 20px whitesmoke
 }
 
 .member-description {
     text-align: center;
     font-size: 40px;
+    box-shadow: 0 0 15px white;
+    animation: appear 5s;
+
 }
 
 .member-links {
@@ -101,5 +112,14 @@ body {
 @keyframes permarotate {
     to {
         transform: rotate(360deg);
+    }
+}
+
+@keyframes appear {
+    from{
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
     }
 }
