--- a/form.css
+++ b/form.css
@@ -42,16 +42,19 @@ form {
     font-size: 15px;
     font-family: Roboto,Arial,sans-serif;
     margin-top: 10px;
+    border-radius: 5px;
 }
 input{
     height: 20px;
     font-family: Roboto,Arial,sans-serif;
     background: lightblue;
+    border-radius: 5px;
     
 }
 .form{
     height: 60%;
-    background: blueviolet;
-    margin-top: 100px;
+    /* background: blueviolet; */
+     background:#fbaf41d4
+    
     
 }
