--- a/form.css
+++ b/form.css
@@ -40,12 +40,14 @@ form {
 }
 .form-btn button {
     font-size: 15px;
+    width: 205px;
     font-family: Roboto,Arial,sans-serif;
     margin-top: 10px;
     border-radius: 5px;
 }
 input{
     height: 20px;
+    width: 205px;
     font-family: Roboto,Arial,sans-serif;
     background: lightblue;
     border-radius: 5px;
