--- a/form.css
+++ b/form.css
@@ -30,8 +30,15 @@ form {
     border-radius: 15px;
     justify-content:center;
     font-size: 20px;
-    
-
+}
+.form-text{
+    font-family: Roboto,Arial,sans-serif;
+    letter-spacing: 2px;
+    font-size: 25px
+}
+.form-text2{
+    font-family: Roboto,Arial,sans-serif;
+    font-size: 13px
 }
 .form-btn{
     border-radius: 15px;
