--- a/project.css
+++ b/project.css
@@ -1,3 +1,19 @@
+
+body {
+    margin: 0;
+    padding-left: 10%;
+    padding-right: 10%;
+    background-image: url('img/body_bg.jpg');
+    background-attachment: fixed;
+    
+}
+
+.bg-img {
+   
+    filter: blur(5px)
+}
+
+
 /* nav */
 
 #nav {
@@ -7,8 +23,9 @@
     justify-content: space-between;
     position: fixed;
     top: 0;
-    left: 0;
-    right: 0;
+    left: 10%;
+    right: 10%;
+    
 }
 .logo {
     height: 80px;
@@ -34,7 +51,7 @@
     height: 52px;
     font-size: 18px;
     margin: 5px;
-    width: 230px;
+    width: 200px;
     color: white;
     font-family: Roboto,Arial,sans-serif;
     text-decoration: none;
@@ -252,9 +269,7 @@ input{
 
 /* team  */
 
-body {
-    margin: 0;
-}
+
 #team {
     background: #122843;
     /* background-image: linear-gradient(to bottom right, #d9e1eb 50%, #122843 50%); */
