--- a/project.css
+++ b/project.css
@@ -1,13 +1,3 @@
-body {
-    margin: 0;
-    padding-left: 10%;
-    padding-right: 10%;
-    background-image: url('img/body_bg.jpg');
-    background-attachment: fixed;
-    
-    
-}
-
 /* nav */
 
 #nav {
@@ -17,9 +7,8 @@ body {
     justify-content: space-between;
     position: fixed;
     top: 0;
-    left: 10%;
-    right: 10%;
-    
+    left: 0;
+    right: 0;
 }
 .logo {
     height: 80px;
@@ -44,7 +33,7 @@ body {
     height: 52px;
     font-size: 18px;
     margin: 5px;
-    width: 200px;
+    width: 230px;
     color: white;
     font-family: Roboto,Arial,sans-serif;
     text-decoration: none;
@@ -262,7 +251,9 @@ input{
 
 /* team  */
 
-
+body {
+    margin: 0;
+}
 #team {
     background: #122843;
 
