media query css added

--- a/project.desktop.css
+++ b/project.desktop.css
@@ -2,7 +2,7 @@
 
 #nav {
     height: 76px;
-    background:#0771f3;
+    background:#254164;
     display: flex;
     justify-content: space-between;
     position: fixed;
