--- a/project.css
+++ b/project.css
@@ -154,32 +154,32 @@
 
 
 .main-container {
-    background-color: rgb(216, 59, 59);
-    height: 800px;
+    background-color: #f1f4fc;
+    height: 400px;
 }
-
-.main-title {
-    background: rgb(221, 152, 152);
-    height: 250px;
-    text-align: center;
-    font-size: 120px;   
     
-
-}
 
 .main-box {
     display: flex;
     justify-content: space-around;
     padding-top: 40px; 
+    
 }
 
 .main-column {
-    margin: 5px;
+    margin: auto;
     text-align: center;
+    color: #726d87;
+    font-size: 2.1rem;
+    letter-spacing: -.015em;
+    font-family: theinhardt-web,sans-serif;
+    max-width: 80%;
+
 }
 
 .main-icon {
-    display: block
+    display: block;
+    color: #726d87;
 }
 
 /* end main */
