--- a/project.css
+++ b/project.css
@@ -169,17 +169,21 @@
 .main-column {
     margin: auto;
     text-align: center;
+}
+
+.main-text {
+    text-align: center;
     color: #726d87;
-    font-size: 2.1rem;
+    font-size: 18px;
     letter-spacing: -.015em;
     font-family: theinhardt-web,sans-serif;
-    max-width: 80%;
-
 }
 
 .main-icon {
     display: block;
     color: #726d87;
+    text-align: center;
+    
 }
 
 /* end main */
