--- a/project.css
+++ b/project.css
@@ -177,6 +177,8 @@
     font-size: 18px;
     letter-spacing: -.015em;
     font-family: theinhardt-web,sans-serif;
+    width: 350px;
+    
 }
 
 .main-icon {
