--- a/project.css
+++ b/project.css
@@ -71,6 +71,12 @@ body {
     top: 0;
     left: 0;
     width: 100%;
+    background: #2b57a1;
+    color: #fff;
+    display: flex;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    justify-content: space-between;
 }
 
 .logo {
@@ -82,7 +88,8 @@ body {
 
 .menu {
     align-items: stretch;
-    display: none;
+    margin-top:auto;
+    margin-bottom: auto;
 }
 
 .nav-item {
@@ -97,6 +104,8 @@ body {
     letter-spacing: 4px;
     cursor: pointer;
     transition: color 0.5s, font-size 0.5s;
+    display: none;
+
 }
 
 .nav-item:hover {
