--- a/project.css
+++ b/project.css
@@ -118,29 +118,37 @@ body {
 
 #hero {
     width: 100%;
+    background: #2b57a1;
+    color: #fff;
 }
 
 .hero-container {
-    margin-top: 76px;
-    width: 100%
+    margin-top: 4em;
+    width: 100%;
+    padding-top: 2em;
+
 }
 
 .hero-left {
     display: block;
-}
-
-.hero-text {
-    text-align: center;
-    letter-spacing: 2px;
-    font-size: 20px;
-}
-
-.hero-description {
-    text-align: justify;
+    text-align: start;
+    width: 60%;
+    padding-top: 2em;
+    padding-left: 2em;
 }
 
 .hero-button {
-    text-align: center;
+    margin-top: 2.5em;
+    margin-bottom: 2.5em;
+}
+
+.hero-button__color {
+    background: #fff;
+    text-decoration: none;
+    padding: 1em 4em;
+    border-radius: 5px;
+
+
 }
 
 .hero-right {
@@ -151,7 +159,6 @@ body {
 .hero-right img {
     width: 100%;
     height: 100%;
-    box-shadow: 0 0 2em white;
     position: absolute;
     transition: all 2s;
 }
@@ -174,18 +181,7 @@ body {
     }
 }
 
-#hero a {
-    text-decoration: none;
-    height: 52px;
-    font-family: Roboto, Arial, sans-serif;
-    letter-spacing: 4px;
-    cursor: pointer;
-    transition: color 0.5s, font-size 0.5s;
-}
 
-#hero a :hover {
-    font-size: 23px;
-}
 
 /* end hero */
 
