back to input background color white

--- a/project.desktop.css
+++ b/project.desktop.css
@@ -259,7 +259,7 @@ input{
     height: 20px;
     width: 205px;
     font-family: Roboto,Arial,sans-serif;
-    background: #ffeb3bc9;
+    background: #f1f4fc;
     border-radius: 5px;
     
 }
