--- a/project.css
+++ b/project.css
@@ -190,46 +190,47 @@ body {
 .main-container {
 
     background-color: #f1f4fc;
-    height: 500px;
+    padding-top: 4em;
+
+    
 }
     
 
 .main-box {
     justify-content: space-around;
-    padding-top: 30px; 
 }
 
 .main-column {
-    margin: auto;
-
+    padding: 3em;
 }
 
 .main-icon {
     color: #726d87; 
-    height: 200px;
-    width: 350px;
     text-align: center;
     display: table-cell;
-    vertical-align: middle;   
+    vertical-align: middle; 
+    width: 10%;  
+    margin-left: auto;
+    margin-right: auto;
 }
 
+
 .main-text {
-    width: 350px;
-    height: 300px;
     font-family: theinhardt-web,sans-serif;
     text-align: center;
     color: #726d87;
-    font-size: 19px;
+    font-size: 1em;
     letter-spacing: -.015em;
     line-height: 1.7em;
 }
-
+.main-text h3 {
+    font-size: 1.5em
+}
 /* end main */
 
 /* form */
 
 .form-container {
-    height: 600px;
     align-items: center;
     justify-content: center;
 }
@@ -251,13 +252,13 @@ form {
 .form-input {
     border-radius: 15px;
     justify-content: center;
-    font-size: 20px;
+    font-size: 1em;
 }
 
 .form-text {
     font-family: Roboto, Arial, sans-serif;
     letter-spacing: 2px;
-    font-size: 25px;
+    font-size: 2em;
 }
 
 .form-text2 {
