--- a/project.css
+++ b/project.css
@@ -297,20 +297,9 @@ input {
 }
 
 .team-description {
-    font-size: 24px;
+    font-size: 1.2em;
 }
 
-.team-logo {
-    /* margin: 10px; */
-}
-
-.team-logo-img {
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 5%;
-    box-shadow: 0 0 20px whitesmoke;
-}
 
 .team-bottom {
     padding-left: 5%;
